--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           force: true
       - run:
           command: |
-            heroku run --app=$bitcritic php artisan migrate --force
+            heroku run --app=${HEROKU_APP_NAME} php artisan migrate --force
 workflows:
   deploy:
     jobs:
