--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "ibex/crud-generator": "^1.4",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
+        "laravelcollective/html": "^6.4",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
